# Interpolation

Interpolation/: Interpolator.cpp  Interpolator.h  InterpolatorTest.cpp  InterpolatorTest.h  app  compile_flags.txt  interpolator.vcd  main.cpp
hdl_tb/: interpolator_tb.sv
synth/: CMakeLists.txt  synth_main.cpp
